# Crawler-Reddit

./: .env.example  .gitignore  .pre-commit-config.yaml  ACCEPTANCE_CHECKLIST.md  AGENTS.md  BUILD_STATUS.md  CHANGELOG.md  MANUAL_SETUP_CHECKLIST.md  MASTER_BUILD_PROMPT.md  Makefile  OFFICIAL_REFERENCES.md  PHASE_PROMPTS.md  README.md  pyproject.toml
.cursor/: Dockerfile  environment.json
.cursor/rules/: reddit-intelligence.mdc
.github/workflows/: ci.yml  daily-maintenance.yml  pipeline.yml
.streamlit/: config.toml
config/: research.yml  taxonomy.yml
data/demo/: demo_cost_metrics.json  demo_dataset.csv  demo_run_history.csv
data/fixtures/: reddit_comments.json  reddit_posts.json
docs/: architecture.md  dashboard-metrics.md  data-flow.md  database.md  deployment.md  manual-setup.md  privacy-and-compliance.md  testing-strategy.md  troubleshooting.md  verification-report.md
migrations/: 001_initial_schema.sql
scripts/: bootstrap.py  seed_demo.py  smoke_test.py  validate_workflows.py  verify_environment.py
src/reddit_intelligence/: __init__.py  cli.py  config.py  logging_config.py  models.py  pipeline.py  runtime_state.py
tests/: conftest.py
tests/fixtures/: ai_malformed_response.json  prompt_injection_input.txt
tests/integration/: test_reddit_collector.py
tests/unit/: test_ai_budget.py  test_ai_classifier.py  test_ai_prompts.py  test_ai_schemas.py  test_analytics_aggregates.py  test_analytics_data_access.py  test_analytics_trends.py  test_cleaning.py  test_cli.py  test_config.py  test_dashboard_data_access.py  test_dashboard_pages.py  test_deduplication.py  test_deletion_sync.py  (+11 more)
(+42 files in other folders)
