[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "reddit-product-intelligence"
version = "0.1.0"
description = "AI-powered Reddit product intelligence platform."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Reddit Product Intelligence Maintainers" },
]
dependencies = [
  "httpx>=0.28.1",
  "openai>=1.93.0",
  "pandas>=2.3.0",
  "plotly>=6.2.0",
  "praw>=7.8.1",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "python-dotenv>=1.1.1",
  "pyyaml>=6.0.2",
  "streamlit>=1.46.0",
  "structlog>=25.4.0",
  "supabase>=2.17.0",
  "tenacity>=9.1.2",
  "typer>=0.16.0",
  "vadersentiment>=3.3.2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.16.1",
  "pre-commit>=4.2.0",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "pytest-mock>=3.14.1",
  "ruff>=0.12.1",
  "types-pyyaml>=6.0.12.20250516",
]

[project.scripts]
reddit-intelligence = "reddit_intelligence.cli:run"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
mypy_path = ["src"]
packages = ["reddit_intelligence"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/reddit_intelligence"]
